# ams_simulator

./: CMakeLists.txt  README.md  package.xml
config/: model_params.yaml  vi_okvis.yaml  waypoint1.yaml  waypoint2.yaml  waypoint_slam.yaml
launch/: pid_control_nemo.launch  record_demo.launch  sm_control_nemo.launch  start_add_nemo.launch  start_auv.launch  start_slam.launch  turn_control_nemo.launch  upload_nemo.launch
mesh/: nemo.dae  nemo.stl  nemo0.dae  nemo_fin.dae
rviz/: nemo.rviz  nemo1-2.rviz  nemo1.rviz  nemo1slam.rviz  nemo2.rviz
src/: msg_to_tf.cpp
urdf/: nemo_base.xacro  nemo_current.xacro  nemo_sensors.xacro  nemo_snippets.xacro
world/: stratified_current.world
